# mesh-generator

./: .gitignore  CHANGE_SUMMARY.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.claude/agent-memory/test-writer-runner/: MEMORY.md
.github/workflows/: smoke-tests.yml  unit-tests.yml
ab/: boundary.geojson  city_boundaries.geojson  config.yaml  config_res8.yaml  coverage.geojson  report.json  roads.geojson  routes.json  sites.geojson  towers.geojson  visibility_edges.geojson
abc/: boundary.geojson  config.yaml  report.json  roads.geojson  routes.json  sites.geojson  towers.geojson
fail/: boundary.geojson  city_boundaries.geojson  config.yaml  sites.geojson
generator/: app.py  app_context.py  app_factory.py  boundaries.py  coverage.py  elevation.py  export.py  graph.py  models.py  optimization_manager.py  roads.py  runtime_state.py
generator/handlers/: __init__.py  file_picker_handlers.py  optimization_handlers.py  pipeline_site_handlers.py  project_handlers.py
generator/routes/: __init__.py  optimization.py  pipeline.py  projects.py  sites.py
generator/static/: app.css  app.js
generator/templates/: index.html
save/: boundary.geojson  config.yaml  roads.geojson  routes.json  sites.geojson
src/: api-base.js  api-base.test.js  main.js  style.css
tests/: conftest.py  test_boundaries.py  test_coverage.py  test_elevation.py  test_export.py  test_graph.py  test_models.py  test_optimization_defaults.py  test_optimization_progress.py  test_save_project.py  test_site_height.py  test_tower_coverage_api.py  test_visualizer.py
tests/e2e/: README.md  test_playwright_smoke.py
wrong/: boundary.geojson  config.yaml  coverage.geojson  report.json  roads.geojson  routes.json  sites.geojson  towers.geojson  visibility_edges.geojson
wrong2/: boundary.geojson  config.yaml  roads.geojson  routes.json  sites.geojson
wrong3/: boundary.geojson  city_boundaries.geojson  config.yaml  coverage.geojson  report.json  routes.json  sites.geojson  tower_coverage.geojson  towers.geojson  visibility_edges.geojson
yerevan_gyumri/: boundary.geojson  config.yaml  coverage.geojson  report.json  roads.geojson  routes.json  sites.geojson  towers.geojson  visibility_edges.geojson
