[project]
name = "mesh-generator"
version = "0.1.0"
description = "GUI tool to place mesh network sites on a map and export GeoJSON/config for mesh-engine"
requires-python = ">=3.11,<4.0"
dependencies = [
  "flask>=3.0",
  "pyyaml>=6.0",
  "shapely>=2.0",
  "requests>=2.31",
  "numpy>=1.24",
  "rasterio>=1.3",
  "networkx>=3.0",
  "scipy>=1.17.0,<2.0.0",
  "h3>=4.0",
  "mesh-calculator",
]

[project.scripts]
mesh-generator = "generator.app:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "playwright>=1.58.0,<2.0.0",
]

[tool.uv.sources]
mesh-calculator = { path = "../mesh_calculator", editable = true }

[tool.pytest.ini_options]
markers = [
  "e2e: end-to-end browser tests",
]

[tool.hatch.build.targets.wheel]
packages = ["generator"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
